<resources>
    <string name="app_name" translatable="false">Suisho Connector</string>
    <string name="port">端口</string>
    <string name="pair_code">配对码</string>
    <string name="ipAddressInput_invalid">目标地址无效</string>
    <string name="portInput_invalid">无效端口号 应该在1–65535之间</string>
    <string name="pairCodeInput_invalid">无效配对码</string>
    <string name="text_ok">确定</string>
    <string name="text_exit">退出</string>
    <string name="label_send_text">发送到计算机</string>
    <string name="changeConnectMethod_inputAddress">手动输入地址</string>
    <string name="changeConnectMethod_scanCode">扫码连接</string>
    <string name="inputAddressTips">在PC端点击"切换连接方式"后输入显示的IP及端口</string>
    <string name="input_addressInputText">电脑IP</string>
    <string name="button_connectAddressButton">连接</string>
    <string name="error_emptyInput_pleaseInputAddressHere">请输入IP地址</string>
    <string name="dialog_connecting_text">连接中…</string>
    <string name="dialog_connectFailedAlertText">连接失败:请检查与电脑是否在同一局域网内\n如为手动连接请检查输入是否正确</string>
    <string name="text_error">发生异常</string>
    <string name="service_notification_title">工作中</string>
    <string name="service_notification_content">Suisho Connector正在运行</string>
    <string name="transmit_send_text_input_hint">在此输入文本</string>
    <string name="permission_scanCode_camera_message">该功能需要相机权限用于调用摄像头进行二维码扫描</string>
    <string name="permission_audio_forward_message">该功能需要录音权限\n软件不需要调用设备的麦克风 但Android要求进行内录时也需要该权限
    </string>
    <string name="permission_request_alert_title">需要权限</string>
    <string name="text_cancel">取消</string>
    <string name="transmit_upload_failed_has_uploading_file">请等待上一个文件上传完成</string>
    <string name="transmit_open_file_failed_not_resolve_application">无法打开文件:没有应用程序支持打开它</string>
    <string name="transmit_open_file_failed_not_exists">处理失败:文件已被删除</string>
    <string name="transmit_open_file_failed_null_path">无法打开文件:路径数据异常</string>
    <string name="transmit_send_text_save_local_failed_not_exists">未连接计算机 文本将仅保存至本地</string>
    <string name="transmit_send_clipboard_invalid_data">无法获取数据 请检查剪切板是否为空或已授予本程序剪切板权限</string>
    <string name="transmit_send_failed_network">请先连接计算机或检查网络状况</string>
    <string name="transmit_drag_text_tip">长按时间以拖动文本消息</string>
    <string name="transmit_drag_file_tip">长按文件图标以拖动消息</string>
    <string name="service_connect_success">连接成功</string>
    <string name="text_not_connect">未连接</string>
    <string name="text_unauthorized">未授权</string>
    <string name="text_authorized">已授权</string>
    <string name="text_auth">授权</string>
    <string name="text_computer_id">计算机ID</string>
    <string name="text_phone_id">当前设备ID</string>
    <string name="text_notification_forward">通知转发</string>
    <string name="text_notification_forward_desc">该选项也影响实时通知、媒体控制功能</string>
    <string name="text_address_connect_help">请点击PC端的\"切换连接方式\"按钮查看IP及端口号并在下方对应位置输入</string>
    <string name="text_need_disconnect_first">请先断开现有连接</string>
    <string name="text_already_connected">当前已有连接</string>
    <string name="text_disconnect">断开</string>
    <string name="text_disconnect_confirm_message">确认断开连接?</string>
    <string name="text_disconnect_action_success">已关闭连接</string>
    <string name="text_need_connect_first">请先连接计算机</string>
    <string name="text_connected">已连接(%d)</string>
    <string name="text_change">切换</string>
    <string name="text_connection_state_subtitle_not_connect">扫码或输入地址连接</string>
    <string name="nav_home">主页</string>
    <string name="nav_transmit">互传</string>
    <string name="nav_setting">设置</string>
    <string name="text_copy_full">全部复制</string>
    <string name="text_copy_free">自由选择</string>
    <string name="text_delete">删除</string>
    <string name="text_open_url">打开链接</string>
    <string name="text_multiple_choice">多选</string>
    <string name="error_camera_init">初始化相机失败!</string>
    <string name="text_share">分享</string>
    <string name="text_ssl_verify_error">SSL验证失败 双端证书不匹配 请尝试清理手机端证书后重试</string>
    <string name="text_running">运行中</string>
    <string name="text_not_running">未运行</string>
    <string name="text_not_permission">无权限</string>
    <string name="connection_auto_mode">正在扫描绑定的设备</string>
    <string name="state_name_icon_packing">正在打包应用图标</string>
    <string name="state_desc_icon_packing">用于发送至计算机显示</string>
    <string name="state_name_battery_opt">电池优化未关闭</string>
    <string name="state_desc_battery_opt">应用后台进程可能被杀</string>
    <string name="state_tip">有新的提醒 点击查看</string>
    <string name="state_name_query_package_permission">无获取应用列表权限</string>
    <string name="state_desc_query_package_permission">PC端图标显示 通知转发设置等将出现异常</string>
    <string name="state_name_error">发生异常</string>
    <string name="state_desc_error_packing_icon">打包应用图标时发生异常 请尝试重启程序</string>
    <string name="state_name_notification_listener_permission">无通知读取权限</string>
    <string name="state_desc_notification_listener_permission">通知转发、远程媒体管理无法正常工作</string>
    <string name="state_name_send_notification">无法发送通知</string>
    <string name="state_desc_send_notification">前台服务不能通过常驻通知保活</string>
    <string name="state_name_auto_connect_error">自动连接异常</string>
    <string name="state_desc_auto_connect_error">功能运行过程中发生异常</string>
    <string name="state_title_protocol_version_mismatch">协议版本不匹配</string>
    <string name="state_desc_protocol_version_mismatch">部分功能可能无法正常工作 建议更新双方客户端</string>
    <string name="state_title_not_interruption_filter_access_permission">无勿扰模式权限</string>
    <string name="state_desc_not_interruption_filter_access_permission">将无法在PC端调整该项设置</string>
    <string name="title_activity_file_upload">发送到计算机</string>
    <string name="text_send_file">发送文件</string>
    <string name="text_send_text">发送文本</string>
    <string name="text_sent">已发送</string>
    <string name="text_send_file_null_action">无法解析分享类型</string>
    <string name="text_send_text_dialog_message">确认将分享文本发送至计算机?\n内容预览(最多显示100字符):\n
    </string>
    <string name="text_distrusted">不信任</string>
    <string name="text_cancel_trust">取消信任</string>
    <string name="dialog_trust_computer_title">信任此设备?</string>
    <string name="dialog_distrust_computer_title">不再信任此设备?</string>
    <string name="dialog_trust_computer_message">信任的计算机可以访问手机的通知、文件等数据并可能保存在本地
        其中可能包含隐私信息 请谨慎操作</string>
    <string name="dialog_write_external_storage_permission_message">
        在此Android版本上 使用该功能需要\"写入外部存储\"权限 您尚未授予软件该权限\n点击"确定"将发起授权请求
    </string>
    <string name="text_trust">信任</string>
    <string name="state_title_auto_connect_pause">自动连接暂停</string>
    <string name="state_desc_auto_connect_pause_not_wifi">未连接到WLAN网络</string>
    <string name="dialog_query_all_packages_permission_desc">\"获取应用列表\"属特殊权限 系统限制严重 无法直接发起申请 不支持直接跳转具体设置页\n且各厂商对其修改均有不同\n点击\"确定\"将跳转至应用详情页 部分厂商会将其和其他权限放在一起方便用户修改\n如实在找不到该设置项 只能自行搜索设备品牌和系统如何开启该权限了\n(授予权限后需要重启应用以重新触发缓存创建)</string>
    <string name="service_mediaProjection_notification_title">音频转发服务</string>
    <string name="service_mediaProjection_notification_content">音频转发正在运行</string>
    <string name="text_send_file_not_data">无法发送文件:数据异常</string>
    <string name="text_send_file_from_self">无法发送来自自身的文件</string>
    <string name="text_manage">管理</string>
    <string name="setting_trust_device_manager">信任设备管理</string>
    <string name="setting_clear_auto_connect_file">解除自动连接绑定</string>
    <string name="setting_group_functions">功能</string>
    <string name="setting_function_notification_forward">通知转发</string>
    <string name="trusted_device_manager_not_device">无已信任的设备</string>
    <string name="text_connected_device_remove_trust_button">当前连接</string>
    <string name="text_loading">加载中</string>
    <string name="storage_manage_cache_desc">打包的应用图标、系统优化的代码等 会在需要时重新生成</string>
    <string name="text_clear">清理</string>
    <string name="text_wipe_data">清除数据</string>
    <string name="text_file_manage">文件浏览</string>
    <string name="dialog_wipe_data_title">正在抹除数据</string>
    <string name="dialog_wipe_data_message">完成后程序将自动退出</string>
    <string name="text_cleared">清理完成</string>
    <string-array name="array_setting_dropdown_transmit_save_file_path">
        <item>私有目录</item>
        <item>Download目录</item>
    </string-array>
    <string-array name="array_setting_dropdown_transmit_file_conflict_behavior">
        <item>新文件名追加时间戳</item>
        <item>覆盖旧重名文件</item>
    </string-array>
    <string name="setting_transmit_file_save_location">接收文件存储位置</string>
    <string name="setting_transmit_file_save_location_desc">该选项同时影响\'文件同步\'的接收位置</string>
    <string name="setting_transmit_file_conflict_behavior">文件名冲突处理</string>
    <string name="setting_transmit_file_conflict_behavior_desc">当接收的文件名重复时如何处理</string>
    <string name="home_card_trust_mode">信任模式</string>
    <string name="home_card_media_projection">音频转发</string>
    <string name="home_change_trust_mode_not_connected_tip">需要连接计算机才能修改该设置
如有需要可前往设置页\'信任设备管理\'进行操作
    </string>
    <string name="dialog_close_application_confirm_message">确认关闭应用?</string>
    <string name="text_connect_failed">连接失败</string>
    <string name="text_invalid_qrcode">无效二维码</string>
    <string name="text_delete_file">删除文件</string>
    <string name="dialog_scanned_wrong_qrcode">二维码错误 这是用于在局域网内下载安装包的二维码\n你应该扫描用于连接的二维码(软件启动后主页显示的)\n如果你是需要更新客户端 请点击下方按钮选择直接或通过浏览器下载</string>
    <string name="text_direct_download">直接下载</string>
    <string name="text_open_in_browser">浏览器打开</string>
    <string name="direct_download_desc">客户端下载中</string>
    <string name="setting_function_auto_exit_on_disconnect">自动退出</string>
    <string name="setting_function_auto_exit_on_disconnect_desc">连接被关闭且软件正在后台时自动终止进程 避免耗电</string>
    <string name="state_title_error_file_server">文件浏览模块初始化异常</string>
    <string name="state_desc_error_file_server">相关功能可能无法工作 请尝试重新连接</string>
    <string name="setting_function_file_manager">文件浏览</string>
    <string name="setting_function_file_manager_desc">允许信任的计算机浏览和下载设备文件</string>
    <string name="setting_function_text_send_shortcut">文本快捷发送</string>
    <string name="setting_function_text_send_shortcut_desc">在系统文本选择菜单中添加发送选项</string>
    <string name="setting_function_file_upload_shortcut">文件快捷发送</string>
    <string name="setting_function_file_upload_shortcut_desc">在文件打开方式或分享菜单中添加发送选项</string>
    <string name="setting_function_disable_do_not_disturb_on_disconnect">自动关闭勿扰</string>
    <string name="setting_function_disable_do_not_disturb_on_disconnect_desc">当连接断开时自动关闭由计算机远程开启的勿扰模式</string>
    <string name="error_change_file_manager">应用变更时发生异常 请尝试重启软件</string>
    <string name="setting_storage_permission_dialog_message">使用该功能需要存储权限 点击\"确定\"发起授权</string>
    <string name="text_crash_dialog_title">应用程序崩溃</string>
    <string name="text_crash_dialog_message">Suisho Connector崩溃了,在设置中将日志导出并发送给开发者有助于修复此问题.带来不便深感抱歉.</string>
    <string name="text_export_success">导出完成</string>
    <string name="text_not_log">无可导出日志</string>
    <string name="text_export_failed">导出失败</string>
    <string name="setting_launch_verify_summary_device_not_password">无法使用:设备未设置锁屏密码</string>
    <string name="auth_dialog_title">身份验证</string>
    <string name="setting_launch_verify_summary_unsupported">无法使用:设备不支持</string>
    <string name="setting_report_light_doze_mode_not_support">设备Android版本过低 无法上报该数据</string>
    <string name="text_verify_success">验证成功</string>
    <string name="auth_dialog_desc">我们需要确保您是机主</string>
    <string name="setting_launch_verify_summary_exception">无法使用:初始化时发生异常</string>
    <string name="card_text_waiting_verify">等待用户验证</string>
    <string name="auth_launch_verify_dialog_message">为保护机主隐私 使用该程序前需要通过身份验证</string>
    <string name="text_verify">验证</string>
    <string name="service_notification_button_close">关闭连接</string>
    <string name="dialog_clear_auto_connect_file_title">解绑设备</string>
    <string name="dialog_clear_auto_connect_file_desc">确认解绑设备?将不再进行自动连接</string>
    <string name="text_unbind_success">解绑完成 重启生效</string>
    <string name="text_unbind_failed_not_bound">当前未绑定任何设备 请在PC端执行设备绑定</string>
    <string name="text_android_version_not_support">当前Android版本过低 不支持此功能</string>
</resources>