<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/text_manage" >
        <Preference
            android:icon="@drawable/baseline_computer_24"
            android:key="key_open_trust_device_manager"
            android:title="@string/setting_trust_device_manager" />
        <Preference
            android:icon="@drawable/baseline_storage_24"
            android:key="key_storage_manage"
            android:title="存储空间管理" />
        <Preference
            android:icon="@drawable/baseline_cell_tower_24"
            android:key="key_clear_auto_connect_file"
            android:title="@string/setting_clear_auto_connect_file"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_group_functions">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_notifications_active_24"
            android:key="function_notification_forward"
            android:summary="@string/text_notification_forward_desc"
            android:title="@string/setting_function_notification_forward" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_insert_drive_file_24"
            android:key="function_file_manager"
            android:summary="@string/setting_function_file_manager_desc"
            android:title="@string/setting_function_file_manager" />
        <SwitchPreferenceCompat
            android:persistent="false"
            android:icon="@drawable/baseline_file_upload_24"
            android:key="function_enable_file_upload_intent_filter"
            android:summary="@string/setting_function_file_upload_shortcut_desc"
            android:title="@string/setting_function_file_upload_shortcut" />
        <SwitchPreferenceCompat
            android:persistent="false"
            android:icon="@drawable/baseline_short_text_24"
            android:key="function_text_selection_shortcut"
            android:summary="@string/setting_function_text_send_shortcut_desc"
            android:title="@string/setting_function_text_send_shortcut" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_close_24"
            android:key="function_auto_exit_on_disconnect"
            android:summary="@string/setting_function_auto_exit_on_disconnect_desc"
            android:title="@string/setting_function_auto_exit_on_disconnect" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_fingerprint_24"
            android:key="function_launch_verify"
            android:summary="在软件启动时要求验证身份"
            android:enabled="false"
            android:title="启动时验证"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/baseline_vibration_24"
            android:key="enable_haptic"
            android:summary="关闭后点击等交互将不再有振动反馈(长按等系统振动不受影响)"
            android:title="启用振动效果" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_shield_24"
            android:key="function_enable_flag_secure"
            android:summary="阻止在应用内进行截屏并阻止录屏录制到应用窗口"
            android:title="阻止截录屏" />
    </PreferenceCategory>
    <PreferenceCategory android:title="互传">
        <Preference
            android:icon="@drawable/baseline_drive_file_move_24"
            android:key="file_save_location"
            android:summary="@string/setting_transmit_file_save_location_desc"
            android:title="@string/setting_transmit_file_save_location" />
        <Preference
            android:icon="@drawable/baseline_downloading_24"
            android:key="file_name_conflict_behavior"
            android:summary="@string/setting_transmit_file_conflict_behavior_desc"
            android:title="@string/setting_transmit_file_conflict_behavior" />
        <Preference
            android:icon="@drawable/baseline_file_copy_24"
            android:key="key_export_transmit_files"
            android:summary="导出私有目录中的互传文件避免访问权限问题"
            android:title="导出互传文件" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/baseline_playlist_remove_24"
            android:key="transmit_delete_message_confirm"
            android:summary="删除互传消息时弹出二次确认对话框"
            android:title="删除消息确认" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/baseline_data_saver_off_24"
            android:key="transmit_save_history"
            android:summary="关闭后传输记录将不会保存"
            android:title="保存传输记录" />
    </PreferenceCategory>
    <PreferenceCategory android:title="杂项">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_bug_report_24"
            android:key="enable_debug_log"
            android:summary="可能影响性能 建议仅在需要反馈异常时使用(重启后生效)"
            android:title="开启调试日志" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/baseline_update_24"
            android:key="enable_auto_check_update"
            android:summary="在程序启动时自动检查更新"
            android:title="检查更新" />
        <Preference
            android:icon="@drawable/baseline_archive_24"
            android:key="key_export_crash_logs"
            android:summary="将所有日志打包导出"
            android:title="导出日志"/>
        <Preference
            android:icon="@drawable/outline_info_24"
            android:key="key_about"
            android:title="关于" />
    </PreferenceCategory>
    <PreferenceCategory android:title="实验性" android:summary="可能存在异常或不稳定 请按需谨慎使用">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/baseline_highlight_24"
            android:key="report_light_doze"
            android:summary="该状态可能并不影响数据传输及时性 根据情况选择是否执行上报"
            android:title="上报LightDoze状态" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_wifi_lock_24"
            android:key="enable_wake_lock_after_connected"
            android:summary="尝试缓解部分OEM系统杀后台问题 可能导致耗电增加 修改后重新连接生效"
            android:title="连接后触发唤醒锁" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/baseline_picture_in_picture_alt_24"
            android:key="enable_notification_large_icon_report"
            android:summary="当通知携带大图时将其上传至计算机显示(在弹出通知中代替应用图标)"
            android:title="携带通知图片" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>