<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/material_dynamic_primary90"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/long_click_menu_action_copy_full"
            android:text="@string/text_copy_full" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/long_click_menu_action_copy_free"
            android:text="@string/text_copy_free" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/long_click_menu_action_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_delete" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/long_click_menu_action_multiple_choice"-->
<!--            android:text="@string/text_multiple_choice"/>-->

    </LinearLayout>
</androidx.cardview.widget.CardView>